--- a/public/assets/sass/main.scss
+++ b/public/assets/sass/main.scss
@@ -6,6 +6,7 @@
 @import 'libs/html-grid';
 @import url('https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,300italic,400italic');
 @import url('fontawesome-all.min.css');
+@import url('lightbox.min.css');
 
 /*
 	Astral by HTML5 UP
@@ -377,6 +378,13 @@
 				margin: 0 auto;
 				width: auto;
 			}
+		}
+	}
+
+/* Gallery */
+	#gallery {
+		img:hover {
+			transform: scale(1.1);
 		}
 	}
 
