--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -1,6 +1,8 @@
 @import url("https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,300italic,400italic");
 @import url("fontawesome-all.min.css");
 @import url("lightbox.min.css");
+@import url("leaflet.css");
+@import url("leaflet.fullscreen.css");
 /*
 	Astral by HTML5 UP
 	html5up.net | @ajlkn
@@ -1007,7 +1009,6 @@ html {
 }
 
 body {
-  background-image: url("images/overlay.png"), url("images/bg.jpg");
   background-repeat: repeat, no-repeat;
   background-size: auto, 100% 100%;
   background-attachment: fixed;
@@ -1243,6 +1244,11 @@ header > p {
 /* Gallery */
 #gallery img:hover {
   transform: scale(1.1);
+}
+
+/* Map */
+#map {
+  height: 600px;
 }
 
 /* Button */
@@ -1491,6 +1497,19 @@ ul.actions li:first-child {
   #nav a span {
     display: none;
   }
+}
+
+/* Background Granim Gradient */
+#bg-gradient {
+  position: absolute;
+  display: block;
+  width: 100%;
+  height: 100em;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  overflow: auto;
 }
 
 /* Wrapper */
