Fix footer visibility

--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -1746,6 +1746,7 @@ body.is-preload #wrapper {
   text-align: center;
   padding: 2em 0 0 0;
   font-size: 0.75em;
+  z-index: 1;
 }
 #footer a {
   color: #ddd;
