--- a/public/assets/sass/main.scss
+++ b/public/assets/sass/main.scss
@@ -626,10 +626,10 @@
 
 /* Background Granim Gradient */
 	#bg-gradient {
-		position: absolute;
+		position: fixed;
     display: block;
     width: 100%;
-    height: 100em;
+    height: 100%;
     top: 0;
     right: 0;
     bottom: 0;
@@ -644,7 +644,7 @@
 		margin: 0 auto;
 		min-height: 100vh;
 		max-width: 100%;
-		padding: 4em 0;
+		padding: 2.5em 0em 0em 0em;
 		@include vendor('display', 'flex');
 		@include vendor('flex-direction', 'column');
 		@include vendor('align-items', 'center');
