--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -27,6 +27,11 @@ body::-webkit-scrollbar {
   display: none;
 }
 
+iframe {
+  position: relative;
+  display: block;
+}
+
 /*
   Top Navigation Bar
 */
