--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -13,6 +13,14 @@
   bottom: 0;
   left: 0;
   overflow: auto;
+  z-index: -1;
+}
+
+/*
+  Header Texts
+*/
+h1 {
+  text-align: center;
 }
 
 /*
@@ -36,16 +44,14 @@ iframe {
   Top Navigation Bar
 */
 .topnav {
-  overflow: hidden;
   margin-bottom: 10px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .topnav a {
-  position: relative;
-  float: left;
-  display: block;
   color: #f2f2f2;
-  text-align: center;
   padding: 5px 16px;
   text-decoration: none;
   font-size: 30px;
