--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1,3 +1,5 @@
+@import url("https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css");
+@import url("https://fonts.googleapis.com/css?family=Poppins");
 @import url("lightbox.min.css");
 
 /*
@@ -29,15 +31,11 @@ h1 {
 body {
   -ms-overflow-style: none;  /* IE and Edge */
   scrollbar-width: none;  /* Firefox */
+  font-family: "Poppins";
 }
 
 body::-webkit-scrollbar {
   display: none;
-}
-
-iframe {
-  position: relative;
-  display: block;
 }
 
 /*
@@ -71,25 +69,33 @@ iframe {
 /*
   Masonry Image Gallery
 */
-img {
-  width: 100%;
-}
 
 .masonry {
-	column-count: 4;
-	column-gap: 10px;
+  column-count: 4;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 10px;
+}
+
+.masonry::after {
+  content: "";
+  flex-grow: 999;
 }
 
 .masonry .mItem {
-  display: inline-block;
-  margin-bottom: 10px;
-  width: 100%;
   position: relative;
+  flex: 1 1 auto;
+  height: calc(100vh/3);
 }
 
-/*
-  Change style based on screen size
-*/
+img {
+  width: 100%;
+  height: 100%;
+  vertical-align: middle;
+  object-fit: cover;
+}
+
 @media (max-width: 1199px) {
   .masonry {
     column-count: 3;
@@ -102,7 +108,6 @@ img {
   }
 }
 
-/* Small screens (phones): Only one image column, show topnav hamburger icon */
 @media (max-width: 767px) {
   .masonry {
     column-count: 1;
