Use CDN for external scripts, refactor gallery code, remove navbar & gradient scripts

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1,6 +1,6 @@
 @import url("https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css");
 @import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap'); 
-@import url("lightbox.min.css");
+@import url("lightbox.min.css"); /* Custom lightbox css to change location of images */
 
 /*
   Background Gradient
