--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -91,12 +91,22 @@ body::-webkit-scrollbar {
   flex: 1 1 auto;
   text-align: center;
   margin-bottom: 5px;
+  display: none;
 }
 
 .suntime {
   display: inline-block;
   margin-inline: 5px;
 }
+
+.info p {
+  margin-bottom: 0;
+}
+
+#goldenhour-evening {
+  margin-bottom: 10px;
+}
+
 .wi {
   font-size: 42px;
   display: block;
