--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -43,7 +43,6 @@ body::-webkit-scrollbar {
 */
 .navbar {
   background-color: #333;
-  overflow: hidden;
   position: fixed;
   top: 0;
   width: 100%;
@@ -70,6 +69,30 @@ body::-webkit-scrollbar {
 .gallery-control {
   float: right;
   color: pink;
+}
+.dropdown {
+  position: relative;
+}
+.dropdown-content {
+  display: none;
+  position: absolute;
+  top: 53px;
+  right: 0;
+  font-size: medium;
+  background-color: #333;
+  text-decoration: none;
+}
+
+.dropdown-item {
+  display: block;
+  outline: auto;
+  white-space: nowrap;
+  padding: 5px 5px;
+}
+
+.dropdown:hover .dropdown-content {
+  display: block;
+  cursor: pointer;
 }
 
 .page-icon a {
